# qt-creator

./: CMakeLists.txt
.github/workflows/: build_cmake.yml
cmake/: ClangComponents.cmake
doc/qtcreator/src/meson/: creator-projects-meson-building.qdocinc  creator-projects-meson.qdoc
src/plugins/: CMakeLists.txt  plugins.pro  plugins.qbs
src/plugins/mesonprojectmanager/: CMakeLists.txt  MesonProjectManager.json.in  cmakeprojectmanager.pro  mesonpluginconstants.h  mesonprojectmanager.qbs  mesonprojectplugin.cpp  mesonprojectplugin.h  ressources.qrc
src/plugins/mesonprojectmanager/ExeWrappers/: mesontools.h  mesonwrapper.cpp  mesonwrapper.h  ninjawrapper.h  toolwrapper.h
src/plugins/mesonprojectmanager/KitHelper/: kitdata.h  kithelper.h
src/plugins/mesonprojectmanager/MachineFiles/: machinefilemanager.cpp  machinefilemanager.h  nativefilegenerator.cpp  nativefilegenerator.h
src/plugins/mesonprojectmanager/MesonActionsManager/: mesonactionsmanager.cpp  mesonactionsmanager.h
src/plugins/mesonprojectmanager/MesonInfoParser/: buildoptions.h  mesoninfo.h  mesoninfoparser.cpp  mesoninfoparser.h  target.h
src/plugins/mesonprojectmanager/MesonProject/: buidoptionsmodel.cpp  buidoptionsmodel.h  kitdata.h  kithelper.h  mesonbuildconfiguration.cpp  mesonbuildconfiguration.h  mesonbuildsettingswidget.cpp  mesonbuildsettingswidget.h  mesonbuildsettingswidget.ui  mesonbuildstep.cpp  mesonbuildstep.h  mesonbuildstepconfigwidget.cpp  mesonbuildstepconfigwidget.h  mesonbuildsystem.cpp  mesonbuildsystem.h  mesonprocess.cpp  (+12 more)
src/tools/clangpchmanagerbackend/: CMakeLists.txt
(+132 files in other folders)
